...
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/start_auth"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/start_authorization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

...
                    android:layout_marginTop="@dimen/section_margin"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    style="@style/Base.TextAppearance.AppCompat.Body1"/>

                <Button
                    android:id="@+id/retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retry_label" />

            </LinearLayout>
        </LinearLayout>
...
